Add small updates

--- a/project1/.appGenInfo.json
+++ b/project1/.appGenInfo.json
@@ -6,7 +6,7 @@
     "metadataFilename": "",
     "serviceUrl": "N/A",
     "appName": "project1",
-    "appTitle": "App Title",
+    "appTitle": "Course project",
     "appDescription": "An SAP Fiori application.",
     "appNamespace": "",
     "ui5Theme": "sap_horizon",
