--- a/project1/webapp/manifest.json
+++ b/project1/webapp/manifest.json
@@ -14,6 +14,24 @@
       "id": "@sap/generator-fiori:basic",
       "version": "1.20.1",
       "toolsId": "4809c35b-1e11-4163-b8a5-2dcfca1e65bf"
+    },
+    "dataSources": {
+      "oDataV2": {
+        "uri": "/bookshopV2/",
+        "type": "OData",
+        "settings": {
+          "odataVersion": "2.0",
+          "localUri": "localService/metadataV2.xml"
+        }
+      },
+      "oDataV4": {
+        "uri": "/bookshopV4/",
+        "type": "OData",
+        "settings": {
+          "odataVersion": "4.0",
+          "localUri": "localService/metadataV4.xml"
+        }
+      }
     }
   },
   "sap.ui": {
@@ -50,10 +68,18 @@
         "settings": {
           "bundleName": "project1.i18n.i18n",
           "supportedLocales": [
-            ""
+            "en"
           ],
           "fallbackLocale": ""
         }
+      },
+      "oDataV2": {
+        "type": "sap.ui.model.odata.v2.oDataModel",
+        "dataSource": "oDataV2"
+      },
+      "oDataV4": {
+        "type": "sap.ui.model.odata.v4.oDataModel",
+        "dataSource": "oDataV4"
       }
     },
     "resources": {
