[Task 3-5] oData Model integration

--- a/project1/ui5-mock.yaml
+++ b/project1/ui5-mock.yaml
@@ -34,11 +34,11 @@ server:
       configuration:
         mountPath: /
         services:
-          - urlPath: /bookshopV4
+          - urlPath: /V4/OData/OData.svc/
             metadataPath: ./webapp/localService/metadataV4.xml
             mockdataPath: ./webapp/localService/dataV4
             generateMockData: true
-          - urlPath: /bookshopV2
+          - urlPath: /V2/OData/OData.svc/
             metadataPath: ./webapp/localService/metadataV2.xml
             mockdataPath: ./webapp/localService/dataV2
             generateMockData: true
