--- a/project1/ui5-mock.yaml
+++ b/project1/ui5-mock.yaml
@@ -37,9 +37,9 @@ server:
           - urlPath: /V4/OData/OData.svc/
             metadataPath: ./webapp/localService/metadataV4.xml
             mockdataPath: ./webapp/localService/dataV4
-            generateMockData: true
+            generateMockData: false
           - urlPath: /V2/OData/OData.svc/
             metadataPath: ./webapp/localService/metadataV2.xml
             mockdataPath: ./webapp/localService/dataV2
-            generateMockData: true
+            generateMockData: false
           
